# agent-sandbox

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rustfmt.toml
.cargo/: config.toml
.zed/: settings.json
crates/agent-sandbox-cli/: Cargo.toml
crates/agent-sandbox-cli/src/: lib.rs
crates/agent-sandbox-cli/src/approve/: mod.rs
crates/agent-sandbox-cli/src/elevate/: mod.rs
crates/agent-sandbox-cli/src/ui/: choice.rs  dialog.rs  error.rs  mod.rs  options.rs  push.rs
crates/agent-sandbox-core/: Cargo.toml
crates/agent-sandbox-core/src/: agent_context.rs  approved_bindings.rs  dns_cache.rs  dns_wire.rs  error.rs  graphical_env.rs  hosts.rs  lib.rs  policy.rs  proc_context.rs  scope_target.rs  session_context.rs
crates/agent-sandbox-core/src/merge_policy/: io.rs  merge.rs  mod.rs  project.rs  tests.rs
crates/agent-sandbox-core/src/rpc/: message.rs  mod.rs  push.rs  reply.rs  request.rs  scope.rs  tests.rs
crates/agent-sandbox-dns/: Cargo.toml
crates/agent-sandbox-dns/src/: main.rs
crates/agent-sandbox-enter/: Cargo.toml
crates/agent-sandbox-enter/src/: main.rs
crates/agent-sandbox-fsmon/: Cargo.toml
crates/agent-sandbox-fsmon/src/: lib.rs
crates/agent-sandbox-nfq/: Cargo.toml
crates/agent-sandbox-nfq/src/: main.rs  owner.rs  packet.rs  policy.rs
crates/agent-sandbox-policyd/: Cargo.toml
crates/agent-sandbox-policyd/src/: error.rs  lib.rs  main.rs  spawn.rs  wire.rs
crates/agent-sandbox-policyd/src/server/: client.rs  mod.rs  peer.rs
crates/agent-sandbox-policyd/src/server/dispatch/: auth.rs  check.rs  context.rs  handlers.rs  mod.rs
crates/agent-sandbox-policyd/src/store/: access.rs  context.rs  elevation.rs  filesystem.rs  mod.rs  network.rs  persist.rs  scope_filesystem.rs  scope_network.rs  scope_sudo.rs  status.rs  types.rs  ui.rs  ui_route.rs  util.rs
crates/agent-sandbox-policyd/src/store/decisions/: approve.rs  approve_host.rs  deny.rs  mod.rs  wire.rs
crates/agent-sandbox-proxy/: Cargo.toml
crates/agent-sandbox-proxy/src/: client.rs  connect.rs  error.rs  http.rs  lib.rs  main.rs  pipe.rs  policy.rs  state.rs  transparent.rs
crates/agent-sandbox-syscall/: Cargo.toml
crates/agent-sandbox-syscall-arm/: Cargo.toml
crates/agent-sandbox-syscall-arm/src/: main.rs
crates/agent-sandbox-syscall-broker/: Cargo.toml
crates/agent-sandbox-syscall-broker/src/: lib.rs
crates/agent-sandbox-syscall/src/: policy.rs
crates/cli/: Cargo.toml
crates/cli/src/approve/: mod.rs
crates/cli/src/elevate/: mod.rs
crates/cli/src/ui/: choice.rs  dialog.rs  error.rs  mod.rs  options.rs  push.rs
crates/cli/tests/: binary_contracts.rs
crates/core/: Cargo.toml
crates/core/src/: agent_context.rs  approved_bindings.rs  dns_cache.rs  dns_wire.rs  error.rs  graphical_env.rs  hosts.rs  http.rs  lib.rs  policy.rs  proc_context.rs  rpc_client.rs  scope_target.rs  session_context.rs  socket_owner.rs
crates/core/src/merge_policy/: io.rs  merge.rs  mod.rs  project.rs  tests.rs
crates/core/src/rpc/: message.rs  mod.rs  proxy.rs  push.rs  reply.rs  request.rs  scope.rs  tests.rs
crates/core/tests/: merge_persistence.rs  policy_http_hosts.rs  rpc_wire.rs
crates/dbus-proxy/: Cargo.toml
crates/dbus-proxy/src/: lib.rs  main.rs
crates/dbus-proxy/tests/: public_api.rs
crates/dns/: Cargo.toml
crates/dns/src/: main.rs
crates/dns/tests/: binary_contracts.rs
crates/enter/: Cargo.toml
crates/enter/src/: main.rs
crates/enter/tests/: binary_contracts.rs
crates/fsmon/: Cargo.toml
crates/fsmon/src/: lib.rs
crates/fsmon/tests/: fs_arm_binary.rs  rpc_client.rs
crates/nfq/: Cargo.toml
crates/nfq/src/: attribution.rs  main.rs  owner.rs  packet.rs  policy.rs
crates/nfq/tests/: binary_contracts.rs
crates/policyd/: Cargo.toml
crates/policyd/src/: error.rs  lib.rs  main.rs  spawn.rs  wire.rs
crates/policyd/src/server/: client.rs  mod.rs  peer.rs
crates/policyd/src/server/dispatch/: auth.rs  check.rs  context.rs  handlers.rs  mod.rs
crates/policyd/src/store/: access.rs  context.rs  dbus.rs  elevation.rs  evaluator.rs  filesystem.rs  freeze.rs  http.rs  mod.rs  network.rs  persist.rs  proxy.rs  resource.rs  scope_filesystem.rs  scope_http.rs  scope_network.rs  scope_sudo.rs  status.rs  types.rs  ui.rs  ui_route.rs  util.rs
crates/policyd/src/store/decisions/: approve.rs  approve_host.rs  deny.rs  mod.rs  wire.rs
crates/policyd/tests/: rpc_roundtrip.rs
crates/syscall/: Cargo.toml
crates/syscall-arm/: Cargo.toml
crates/syscall-arm/src/: main.rs
crates/syscall-arm/tests/: binary_contracts.rs
crates/syscall-broker/: Cargo.toml
crates/syscall-broker/src/: decision.rs  dispatch.rs  lib.rs  main.rs  policy_client.rs
crates/syscall-broker/tests/: filesystem_mutation_security.rs
crates/syscall/src/: bpf.rs  lib.rs  policy.rs
crates/syscall/tests/: filesystem_mutation_trap_set.rs
crates/sysutil/: Cargo.toml
crates/sysutil/src/: lib.rs
crates/sysutil/tests/: public_api.rs
extensions/agent-sandbox/: fdctl.c  index.ts  policy-client.ts
nix/checks/agent-sandbox-e2e/: default.nix
nix/checks/hidden-paths/: default.nix
nix/checks/host-runtime-contract/: default.nix
nix/checks/module-assertions/: default.nix
nix/checks/network-mode/: default.nix
nix/checks/policy-symlink-protection/: default.nix
nix/checks/proxy-init/: default.nix
nix/checks/proxy-route/: default.nix
nix/checks/resource-gate-wrapper/: default.nix
nix/lib/: consumer.nix  rust-toolchain.nix
nix/modules/home/agent-sandbox/: default.nix
nix/modules/nixos/agent-sandbox/: agent-sandbox.nix  combinators.nix  default.nix  lib.nix  network.nix  proxy-firewall.sh  proxy-group-gid.sh  proxy-init.sh  proxy-route.sh  readiness-marker.sh  sudo-guard.nix
nix/modules/nixos/agent-sandbox/netns/: down.sh  host-nat.sh  up.sh
nix/shells/default/: default.nix
