[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/core",
  "crates/dbus-proxy",
  "crates/dns",
  "crates/enter",
  "crates/fsmon",
  "crates/nfq",
  "crates/policyd",
  "crates/syscall",
  "crates/syscall-arm",
  "crates/syscall-broker",
  "crates/sysutil",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# internal crates
agent-sandbox-core = { path = "crates/core" }
agent-sandbox-syscall = { path = "crates/syscall" }
agent-sandbox-sysutil = { path = "crates/sysutil" }

# external
caps = "0.5.6"
clap = { version = "4.6.2", features = ["derive"] }
dns-lookup = "3.0.1"
futures-util = "0.3.32"
getrandom = "0.4.3"
globset = "0.4.19"
hickory-proto = "0.26.1"
idna = "1.1.0"
libc = "0.2.186"
nfq-updated = "0.2.6"
nix = "0.31.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.50"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = "1.52.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.24.0", features = ["v4", "v7"] }
which = "8.0.5"
zvariant = "5.13"

[workspace.dependencies.seccompiler]
git = "https://github.com/rust-vmm/seccompiler.git"
rev = "08587106340b8e3cb361c7561411510039436857"

[workspace.dependencies.zbus]
version = "5.17"
default-features = false
features = ["bus-impl", "p2p", "tokio"]

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.lints.rust]
unsafe_code = "deny"
