[package]
name = "agent-sandbox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "agent_sandbox_cli"
path = "src/lib.rs"

[[bin]]
name = "agent-sandbox-approve"
path = "src/bin/approve.rs"

[[bin]]
name = "agent-sandbox-elevate"
path = "src/bin/elevate.rs"

[[bin]]
name = "agent-sandbox-ui"
path = "src/bin/ui.rs"

[[bin]]
name = "agent-sandbox-open-ui-fd"
path = "src/bin/open_ui_fd.rs"

[dependencies]
agent-sandbox-core = { path = "../agent-sandbox-core" }
clap = { version = "4", features = ["derive", "env"] }
nix = { version = "0.31", features = ["user", "fs"] }
libc = "0.2"
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["sync", "io-util", "macros", "net", "rt-multi-thread", "time", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
