[package]
name = "agent-sandbox-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
dns-lookup = "2"
serde = { version = "1", features = ["derive"] }
which = "7"
serde_json = "1"
nix = { version = "0.31.3", features = ["user", "fs", "socket"] }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "net", "rt", "time"] }
hickory-proto = "0.24"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
