[package]
name = "agent-sandbox-fsmon"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "agent-sandbox-fs-arm"
path = "src/bin/agent-sandbox-fs-arm.rs"

[[bin]]
name = "agent-sandbox-fsmon"
path = "src/bin/agent-sandbox-fsmon.rs"

[dependencies]
agent-sandbox-core = { path = "../agent-sandbox-core" }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

