[package]
name = "agent-sandbox-nfq"
version.workspace = true
edition.workspace = true
license.workspace = true


[[bin]]
name = "agent-sandbox-nfq"
path = "src/main.rs"

[dependencies]
agent-sandbox-core = { path = "../agent-sandbox-core" }
clap = { version = "4", features = ["derive"] }
nfq-updated = "0.2.6"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
hickory-proto = "0.24"
