[package]
name = "agent-sandbox-policyd"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "agent-sandbox-policyd"
path = "src/main.rs"

[dependencies]
agent-sandbox-core = { path = "../agent-sandbox-core" }
clap = { version = "4", features = ["derive", "env"] }
nix = { version = "0.31.3", features = ["user", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
