[package]
name = "agent-sandbox-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "agent_sandbox_proxy"
path = "src/lib.rs"

[[bin]]
name = "agent-sandbox-proxy"
path = "src/main.rs"

[dependencies]
agent-sandbox-core = { path = "../agent-sandbox-core" }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
