[package]
name = "agent-sandbox-syscall-arm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "agent-sandbox-syscall-arm"
path = "src/main.rs"

[dependencies]
agent-sandbox-syscall = { path = "../agent-sandbox-syscall" }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
