[package]
name = "agent-sandbox-syscall-broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "agent-sandbox-syscall-broker"
path = "src/main.rs"

[dependencies]
agent-sandbox-core = { path = "../agent-sandbox-core" }
agent-sandbox-syscall = { path = "../agent-sandbox-syscall" }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
