[package]
name = "agent-sandbox-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dns-lookup.workspace = true
getrandom.workspace = true
globset.workspace = true
hickory-proto.workspace = true
idna.workspace = true
libc.workspace = true
nix = { workspace = true, features = ["fs", "socket", "user"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "rt", "time"] }
url = { workspace = true }
uuid = { workspace = true }
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = {
  workspace = true,
  features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
  ]
}

[lints]
workspace = true
