[package]
edition.workspace = true
license.workspace = true
name              = "agent-sandbox-dns"
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "agent-sandbox-dns-forwarder"
path = "src/main.rs"

[dependencies]
agent-sandbox-core.workspace = true
clap.workspace = true
hickory-proto.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
