[package]
edition.workspace = true
license.workspace = true
name              = "agent-sandbox-enter"
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "agent-sandbox-enter"
path = "src/main.rs"

[dependencies]
agent-sandbox-sysutil = { workspace = true }
caps.workspace = true
clap.workspace = true
nix            = { workspace = true, features = ["sched"] }
