[package]
name = "agent-sandbox-enter"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent-sandbox-enter"
path = "src/main.rs"

[dependencies]
agent-sandbox-sysutil = { workspace = true }
caps.workspace = true
clap.workspace = true
nix = { workspace = true, features = ["sched"] }

[lints]
workspace = true
