[package]
name = "agent-sandbox-fsmon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent-sandbox-fs-arm"
path = "src/bin/agent-sandbox-fs-arm.rs"

[[bin]]
name = "agent-sandbox-fsmon"
path = "src/bin/agent-sandbox-fsmon.rs"

[dependencies]
agent-sandbox-core.workspace = true
agent-sandbox-sysutil.workspace = true
clap = { workspace = true, features = ["env"] }
libc.workspace = true
nix = { workspace = true, features = ["dir", "fs", "sched"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
