[package]
edition.workspace = true
license.workspace = true
name              = "agent-sandbox-nfq"
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "agent-sandbox-nfq"
path = "src/main.rs"

[dependencies]
agent-sandbox-core.workspace = true
clap.workspace = true
nfq-updated.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
hickory-proto.workspace = true
