[package]
name = "agent-sandbox-policyd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent-sandbox-policyd"
path = "src/main.rs"

[dependencies]
agent-sandbox-core.workspace = true
clap = { workspace = true, features = ["env"] }
nix = { workspace = true, features = ["fs", "user"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = {
  workspace = true,
  features = [
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
  ]
}
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
