[package]
name = "agent-sandbox-syscall-broker"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent-sandbox-syscall-broker"
path = "src/main.rs"

[dependencies]
agent-sandbox-core.workspace = true
agent-sandbox-syscall.workspace = true
agent-sandbox-sysutil.workspace = true
clap = { workspace = true, features = ["env"] }
libc.workspace = true
nix = { workspace = true, features = ["fs", "process", "signal", "socket"] }
tokio = {
  workspace = true,
  features = ["macros", "net", "rt", "time"]
}
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
